--- a/lab2/src/main/resources/application.properties
+++ b/lab2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.servlet.context-path=/lab2
+server.servlet.context-path=/lab3
 server.port=9000
-spring.datasource.url=jdbc:mysql://localhost:3306/northwind
+spring.datasource.url=jdbc:mysql://localhost:3306/lab7
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
